fix swagger, fix people handlers
